manifests/grafana-operator/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: cilium-gateway-internal
      namespace: kube-system
      sectionName: https-home-lex-la
  hostnames:
    - grafana.home.lex.la
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
